# CheckoutMate

./: .gitignore  pyproject.toml  readme.md  requirements.txt  vercel.json
accounts/: admin.py  models.py  renderers.py  serializers.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
backend/: settings.py  urls.py  wsgi.py
bills/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
bills/migrations/: 0001_initial.py  0002_alter_billitem_bill.py  0003_alter_billitem_bill.py  0004_alter_billitem_bill.py
bills/templates/bills/: bill_pdf.html
bills/templatetags/: math_filters.py
cart/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_alter_cartitem_cart.py  0003_alter_cartitem_cart.py
products/: admin.py  models.py  pagination.py  permissions.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_product_name.py  0003_alter_product_options_and_more.py  0004_alter_product_options_and_more.py  0005_alter_product_options_and_more.py
staticfiles/: staticfiles.json
